# OpenSarToolkit

./: .cz.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  6 Sentinel-1 SLC Parallel Processing.ipynb  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  snap.varfile  snap6.varfile  snap7.varfile
.github/ISSUE_TEMPLATE/: config.yml
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/workflows/: bump.yml  pipy_release.yml  release.yml  unit.yml
data/: polygon.geojson
data/S1A_IW_SLC__1SDV_20190101T171515_20190101T171542_025287_02CC09_0A0B.SAFE/: manifest.safe
data/S1A_IW_SLC__1SDV_20190113T171514_20190113T171541_025462_02D252_C063.SAFE/: manifest.safe
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/application-package/: README  inputs.yaml
graphs/S1_GRD2ARD/: 2_CalGamma.xml  2_CalSigma.xml  3_LSmap.xml
graphs/S1_SLC2ARD/: S1_SLC_AO_Split.xml  S1_SLC_AO_Split_Deb.xml  S1_SLC_Deb_Spk_Halpha.xml  S1_SLC_Tex.xml
graphs/S1_TS/: 1_BS_Stacking_Subset.xml
helpers/: raster.py  scihub.py  vector.py
ost/: Project.py  __init__.py  errors.py  log.py  project.py  settings.py  test.py
ost/app/: preprocessing.py
ost/auxdata/: srtm1sectiles.gpkg
ost/cli/: burst_to_ard_cli.py  grd_to_ard_cli.py
ost/generic/: ard_to_ts.py  common_wrappers.py  mosaic.py  timescan.py  ts_extent.py  ts_ls_mask.py
ost/helpers/: asf.py  asf_wget.py  bursts.py  copdem.py  copernicus.py  db.py  errors.py  helpers.py  onda.py  pbs.py  peps.py  raster.py  scihub.py  settings.py  srtm.py  vector.py
ost/mosaic/: mosaic.py
ost/multitemporal/: ard_to_ts.py  common_extent.py  common_ls_mask.py  timescan.py
ost/s1/: burst.py  burst2Ard.py  burst_batch.py  burst_insar.py  burst_inventory.py  burst_to_ard.py  convert_format.py  download.py  grd2Ard.py  grd2ard.py  grd2ardBatch.py  grdBatch.py  grd_batch.py  grd_to_ard.py  grd_wrappers.py  metadata.py  refine.py  refine_inventory.py  s1_dl.py  s1coherence.py  s1scene.py  s1scenes.py  search.py  search_data.py  slc2Ard.py  slc2Ard__.py  slc2ard.py  ts.py  (+3 more)
resources/: Dockerfile  constraints.txt  opensar.cwl  opensartoolkit.1.0.24.cwl  snap.varfile
s1/: metadata.py  refine.py  slc2ard.py  ts.py
tests/: conftest.py  test_batch.py  test_burst_batch.py  test_burst_to_ard.py  test_common_wrappers.py  test_gpt.py  test_grd_to_ard.py  test_preprocessing.py  test_s1_download.py  test_s1scene.py  test_s1scenes.py  test_search.py  test_slc_to_ard.py  test_slc_wrappers.py  test_snap_common.py  test_vector.py
(+155 files in other folders)
